# nyaax

./: .gitignore  README  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release.yml  test.yml
examples/: get_view.py  utils.py
nyaax/: __init__.py  errors.py  extractors.py  magnets.py  objs.py  utils.py
tests/: _types.py  test_extractors.py
