[project]
name = "nyaax"
version = "0.1.2"
description = "Nyaa API written in Python"
authors = [
  {name = "Simone Gentili", email = "gensimone.git@gmail.com"}
]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"

[tool.poetry.dependencies]
python='^3.8'
beautifulsoup4='^4.8.0'

[tool.poetry.group.dev.dependencies]
requests='^2.32.2'
pytest = '*'
html5lib = '^1.1'
lxml = '^5.2.2'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
